--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_weight="1"
         android:name="com.polycom.polycom.LeftFragment"
         />
-    <FrameLayout
+    <!--<FrameLayout
         android:id="@+id/right_layout"
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -22,5 +22,5 @@
             android:layout_height="match_parent"
             android:name="com.polycom.polycom.RightFragment"
             />
-    </FrameLayout>
+    </FrameLayout>-->
 </LinearLayout>
