--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Send"/>
+        <Button
+            android:id="@+id/close_all_aty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="closeAty"/>
 
     </LinearLayout>
 </LinearLayout>
