delete insert update sqlite

--- a/app/src/main/res/layout/activity_sqlite.xml
+++ b/app/src/main/res/layout/activity_sqlite.xml
@@ -3,9 +3,18 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <Button
-        android:id="@+id/sqlite_btn"
+        android:id="@+id/sqlite_insert_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="数据库"/>
-
+        android:text="insert"/>
+    <Button
+        android:id="@+id/sqlite_update_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="update"/>
+    <Button
+        android:id="@+id/sqlite_delete_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="delete"/>
 </LinearLayout>
