--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -6,10 +6,14 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     >
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/layout_swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/contact_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </android.support.design.widget.CoordinatorLayout>
